# 5FX-Libs

./: CMakeLists.txt  Readme.md
JackWrap/: CMakeLists.txt  Readme.md  jackwrap.cpp  jackwrap.hpp
OSCWrap/: CMakeLists.txt  Readme.md  oscwrap.cpp  oscwrap.hpp
